--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Box Model</title>
     <style>
         .main {
-            padding: 100px 1000px 100px 100px;
+            padding: 100px 100px 100px 100px;
             margin: 100px;
-            text-align: center;
+            /* text-align: center; */
             border: 2px solid black;
         }
     </style>
@@ -19,19 +19,19 @@
     <div class="main">
         <form>
             <label for="first_name">First Name:</label>
-            <input type="text" id="first_name" name=""><br>
+            <input type="text" id="first_name" name=""><br><br>
 
             <label for="middle_name">Middle Name:</label>
-            <input type="text" id="middle_name" name=""><br>
+            <input type="text" id="middle_name" name=""><br><br>
 
             <label for="last_name">Last Name:</label>
-            <input type="text" id="last_name" name=""><br>
+            <input type="text" id="last_name" name=""><br><br>
 
             <label for="email">Email:</label>
-            <input type="email" id="email" name=""><br>
+            <input type="email" id="email" name=""><br><br>
 
             <label for="password">Password:</label>
-            <input type="password" id="password" name=""><br>
+            <input type="password" id="password" name=""><br><br>
         </form>
     </div>
 </body>
