--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         .main {
             padding: 100px 100px 100px 100px;
             margin: 100px;
-            /* text-align: center; */
+            width: 200;
+            height: 200;
             border: 2px solid black;
         }
     </style>
