--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <title>Box Model</title>
     <style>
         .main {
-            padding: 100px 100px 100px 100px;
+            padding: 30px 100px 100px 100px;
             margin: 100px;
-            width: 200;
-            height: 200;
+            width: 200px;
+            height: 200px;
             border: 2px solid black;
         }
+
+        /* form {
+            text-align: center;
+        } */
     </style>
 </head>
 
